# mpi_exec

./: CMakeLists.txt  README.md  main.cpp  makefile  runMPI.sh  runMPI_2.sh  runMPI_4.sh
